--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,7 +1,7 @@
 .active {
-    background-color: #96a1ad; /* Customize the background color for active links */
-    color: #eae0e0; /* Customize the text color for active links */
-    font-weight: bold; /* Customize other styles for active links */
+    background-color: #96a1ad; 
+    color: #eae0e0; 
+    font-weight: bold;
     
   }
  
